--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 # Mobile Tools for Java (J2ME)
 .mtj.tmp/
 
+# Maven project things
+*.classpath
+*.project
+*.metadata
+*.settings
+
 # Package Files #
 *.jar
 *.war
